[package]
name = "chiquitors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4", features = ["runtime-actix-rustls", "sqlite", "macros", "offline", "chrono"]}
actix-web = "3"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
